--- a/WebContent/index/index.html
+++ b/WebContent/index/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>DaniaDS Log in</title>
+<title>DaniaDS Log-in</title>
 <link href="index/index.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
